apps/web/nginx/app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-root-external
  namespace: web
  labels:
    external-dns.edgard.org/scope: external
spec:
  parentRefs:
  - name: external
    namespace: platform-system
    sectionName: https
  - name: external
    namespace: platform-system
    sectionName: https-root
  hostnames:
  - www.edgard.org
  - edgard.org
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-root-internal
  namespace: web
  labels:
    external-dns.edgard.org/scope: internal
spec:
  parentRefs:
  - name: internal
    namespace: platform-system
    sectionName: https
  - name: internal
    namespace: platform-system
    sectionName: https-root
  hostnames:
  - www.edgard.org
  - edgard.org
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx
      port: 80
